--- a/README.rdoc
+++ b/README.rdoc
@@ -26,3 +26,6 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+Below is the url for live website : 
+http://secret-peak-7782.herokuapp.com/
